--- a/resources/assets/charge/lang/zh_cn.json
+++ b/resources/assets/charge/lang/zh_cn.json
@@ -5,6 +5,8 @@
   "block.charge.charge_altar_block": "载物台",
   "block.charge.charge_base_block": "法台基石",
   "block.charge.charge_alchemy_stove_block": "八卦炉",
+  "block.charge.charge_alchemy_anvil_block": "炼器砧",
+  "block.charge_teleport_block":"传送阵",
 
   "item.charge.kong_fang_sword": "孔方",
   "item.charge.fu_yao_sword": "扶摇",
@@ -24,5 +26,6 @@
   "item.charge.the_real_sword": "真",
   "item.charge.the_fake_sword": "假",
   "item.charge.su_guo_sword": "塑果",
-  "item.charge.wu_xiang_sword": "无相"
+  "item.charge.wu_xiang_sword": "无相",
+  "item.qiu_xiao_yao_sword": "求逍遥"
 }
