增加符纸的中间合成item

--- a/resources/assets/charge/lang/zh_cn.json
+++ b/resources/assets/charge/lang/zh_cn.json
@@ -2,6 +2,7 @@
   "itemGroup.charge.charge_tab": "论侠修仙",
   "item.charge.charge_base_token": "令牌",
   "item.charge.charge_guide_book_item": "天书",
+  "item.charge.charge_talisman_paper": "符纸",
   "item.charge.paper_head": "纸头",
   "item.charge.charge_ling_shi": "灵石",
 
