增加聚灵丹

--- a/resources/assets/charge/lang/zh_cn.json
+++ b/resources/assets/charge/lang/zh_cn.json
@@ -18,6 +18,7 @@
   "item.charge.charge_health_pellet": "大还丹",
   "item.charge.charge_power_pellet": "生力丹",
   "item.charge.charge_po_wan_fa_pellet": "破万法丹",
+  "item.charge.charge_ju_ling_pellet": "聚灵丹",
   "item.charge.charge_wan_wu_sheng_pellet": "万物生丹",
   "item.charge.charge_san_shi_pellet": "三尸劫丹",
   "item.charge.charge_deng_xian_pellet": "登仙丹",
