--- a/resources/assets/charge/lang/zh_cn.json
+++ b/resources/assets/charge/lang/zh_cn.json
@@ -11,6 +11,10 @@
   "block.charge.charge_alchemy_stove_block": "八卦炉",
   "block.charge.charge_alchemy_anvil_block": "炼器砧",
   "block.charge.charge_teleport_block":"传送阵",
+  "block.charge.charge_zhen_yao_block":"镇妖塔",
+  "block.charge.charge_ju_ling_block":"聚灵阵",
+  "block.charge.charge_array_flag":"阵旗",
+
   "block.charge.charge_ling_shi_ore": "灵石矿",
 
   "item.charge.charge_bigu_pellet": "辟谷丹",
