增加阵盘的逻辑，阵法的合成表。

--- a/resources/assets/charge/lang/zh_cn.json
+++ b/resources/assets/charge/lang/zh_cn.json
@@ -14,7 +14,7 @@
   "block.charge.charge_zhen_yao_block":"镇妖塔",
   "block.charge.charge_ju_ling_block":"聚灵阵",
   "block.charge.charge_array_flag":"阵旗",
-
+  "block.charge.charge_array_disk":"阵盘",
   "block.charge.charge_ling_shi_ore": "灵石矿",
 
   "item.charge.charge_bigu_pellet": "辟谷丹",
