设置阵盘贴图和block文件，设置乱因果贴图

--- a/resources/assets/charge/lang/zh_cn.json
+++ b/resources/assets/charge/lang/zh_cn.json
@@ -48,6 +48,7 @@
   "item.charge.su_guo_sword": "塑果",
   "item.charge.wu_xiang_sword": "无相",
   "item.charge.qiu_xiao_yao_sword": "求逍遥",
+  "item.charge.luan_yin_guo_sword": "乱因果",
 
   "item.charge.push_back_talisman": "退魔符",
   "item.charge.shield_talisman": "御劫符",
